Refactor workflow context and signal handling
- Updated SignalAwaitWrapper to use Java records for SignalData and ContextInfo, improving code clarity and reducing boilerplate.
- Removed the SignalFutureNative class as it was redundant with the new signal handling approach.
- Enhanced TemporalFutureValue and WorkflowContextNative to utilize new record structures.
- Simplified event handling in EventInfo and WorkflowWorkerNative by leveraging record features.
- Improved type handling in SearchAttributeRegistry and TypesUtil, adopting modern Java features for better readability.
- Cleaned up unused methods and comments across various classes to streamline the codebase.